--- a/cigecfrais/assets/css/bootstrap.css
+++ b/cigecfrais/assets/css/bootstrap.css
@@ -2462,7 +2462,6 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   font-weight: 400;
   text-align: center;
   white-space: nowrap;
-  vertical-align: middle;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -3453,23 +3452,23 @@ tbody.collapse.show {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: inline-block;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-box-align: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
-  width: 100%;
+  width: 20%;
 }
 
 .input-group > .form-control,
 .input-group > .custom-select,
 .input-group > .custom-file {
-  position: relative;
+  
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  width: 1%;
+  width: 100%;
   margin-bottom: 0;
 }
 
